--- a/emailapp/templates/emailapp/email_check.html
+++ b/emailapp/templates/emailapp/email_check.html
@@ -124,6 +124,15 @@
             resize: vertical;
             overflow-y: scroll; /* Added scroll bar for vertical overflow */
         }
+        textarea#emails {
+            margin-bottom: 10px;
+            padding: 12px;
+            width: 100%;
+            box-sizing: border-box;
+            font-size: 16px;
+            resize: vertical;
+            overflow-y: scroll; /* Added scroll bar for vertical overflow */
+        }
     </style>
 </head>
 <body>
